# websearch-agentcore-gateway

./: .eslintrc.json  .gitignore  .gitleaks.toml  ARCHITECTURE.md  DESIGN.md  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
.omc/: project-memory.json
cowork/: .gitignore  README.md  agentcore-token.ps1  agentcore-token.sh  setup-mac.sh  setup-windows.ps1  uninstall-mac.sh  uninstall-windows.ps1
dashboard/: .env.example  README.md  components.json  gen-env.sh  next.config.ts  package.json  pnpm-lock.yaml  run.sh  vitest.config.ts
docs/: 01-deployment-guide.md  02-cowork-setup-mac.md  02-cowork-setup-windows.md  03-observability.md  04-troubleshooting.md  claude-desktop-setup.md  deployment.md
infra/: README.md  cdk.context.json  cdk.json  package.json  tsconfig.json  versions.tf  vitest.config.ts
scripts/: admin-smoke.sh  v1-ship-check.sh
tools/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
tools/_shared/: __init__.py  caller_identity.py  constants.py  identity.py  otel.py  response.py  search_params.py
tools/anthropic/: __init__.py  handler.py
tools/brave/: handler.py
tools/browser/: Dockerfile  handler.py  requirements.txt
tools/duckduckgo/: handler.py  requirements.txt
tools/exa/: handler.py
tools/firecrawl/: handler.py
tools/perplexity/: handler.py
tools/searxng/: handler.py
tools/serper/: handler.py
tools/tavily_lambda/: handler.py
tools/tests/: __init__.py  test_caller_identity.py  test_handlers.py
tools/you/: handler.py
(+201 files in other folders)
